cmake_minimum_required(VERSION 3.18)
project(linklist)
set(CMAKE_CXX_STANDARD 17)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
add_executable(merge_two_sorted_list merge_two_sorted_list.cpp)
add_executable(partition_list partition_list.cpp)
add_executable(merge_k_sorted_list merge_k_sorted_lists.cpp)
add_executable(find_k_from_end find_k_from_end.cpp)
add_executable(find_middle_node find_middle_node.cpp)
add_executable(find_intersection_node find_intersection_node.cpp)
add_executable(has_cycle has_cycle.cpp)