cmake_minimum_required(VERSION 3.18)
project(linklist)
set(CMAKE_CXX_STANDARD 17)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
add_executable(merge_two_sorted_list 01-merge_two_sorted_list.cpp)
add_executable(partition_list 02-partition_list.cpp)
add_executable(merge_k_sorted_list 03-merge_k_sorted_lists.cpp)
add_executable(find_k_from_end 04-find_k_from_end.cpp)
add_executable(find_middle_node 05-find_middle_node.cpp)
add_executable(has_cycle 06-has_cycle.cpp)
add_executable(detect_cycle 07-detect_cycle.cpp)
add_executable(find_intersection_node 08-find_intersection_node.cpp)
add_executable(delete_dup 09-delete_duplicates.cpp)
